feat: update user-related controllers and services to use Long for ID parameters and improve error handling